--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
             <h3 class="text-center">Donation Form</h3><br/><br/>
             </div>
             <div class="panel-body">
-            <form action="payment.php" method="post">
+            <form action="payment.html" method="post">
                 <div class="form-group" >
                     <input type="text" class="form-control"  name="Name" size="20" maxlength="25" autocomplete="off" tabindex="1" placeholder="Your Name" required>
                 </div>
